--- a/a-propos.html
+++ b/a-propos.html
@@ -10,12 +10,11 @@
     <link href="style/style.css" rel="stylesheet" />
     <link href="style/a-propos.css" rel="stylesheet" />
 </head>
-
 <body>
     <header>
         <nav>
             <a href="" class="lien-icone">
-                <img src="images/logo.png" title="accueil" width="48px" alt="Retour à l'accueil" />
+                <img src="images/logo.png" title="accueil"  alt="Retour à l'accueil" />
             </a>
             <div>
                 <a href="index.html">Accueil</a>
@@ -78,7 +77,7 @@
     </main>
     <footer>
         <a href="index.html" class="lien-icone">
-            <img src="images/logo.png" title="accueil" width="48px" alt="Retour à l'accueil" />
+            <img src="images/logo.png" title="accueil"  alt="Retour à l'accueil" />
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
