--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <a href="" class="lien-icone">
-                <img src="images/logo.png" title="Accueil" width="48px" alt="Retour à l'accueil" />
+                <img src="images/logo.png" title="Accueil" alt="Retour à l'accueil" />
             </a>
             <div>
                 <a href="index.html">Accueil</a>
@@ -100,7 +100,7 @@
     </main>
     <footer>
         <a href="index.html" class="lien-icone">
-            <img src="images/logo.png" title="accueil" width="48px" alt="retour à l'accueil" />
+            <img src="images/logo.png" title="accueil" alt="retour à l'accueil" />
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
