--- a/a-propos.html
+++ b/a-propos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>À propos - Paysages</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
     <header>
         <nav>
             <a href="" class="lien-icone">
-                <img src="images/logo.png" title="accueil"  alt="Retour à l'accueil" />
+                <img src="images/logo.png" width="48px" title="accueil"  alt="Retour à l'accueil" />
             </a>
             <div>
                 <a href="index.html">Accueil</a>
@@ -75,7 +76,7 @@
     </main>
     <footer>
         <a href="index.html" class="lien-icone">
-            <img src="images/logo.png" title="accueil"  alt="Retour à l'accueil" />
+            <img src="images/logo.png" width="48px" title="accueil"  alt="Retour à l'accueil" />
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
