--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <a href="" class="lien-icone">
-                    <img src="images/logo.png" title="Accueil" alt="retour à l'accueil" />
+                    <img src="images/logo.png" title="Accueil" width="48px" alt="retour à l'accueil" />
                 </a>
                 <div>
                     <a href="index.html">Accueil</a>
@@ -71,7 +71,7 @@
         </main>
         <footer>
             <a href="index.html" class="lien-icone">
-                <img src="images/logo.png" title="Accueil" alt="Retour à l'accueil" />
+                <img src="images/logo.png" width="48px" title="Accueil" alt="Retour à l'accueil" />
             </a>
             <div>
                 <a target="_blank" href="https://twitter.com/" class="lien-icone">
