--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Paysages</title>
     <link href="style/style.css" rel="stylesheet" />
     <link href="style/portfolio.css" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <a href="" class="lien-icone">
-                <img src="images/logo.png" title="Accueil" alt="Retour à l'accueil" />
+                <img src="images/logo.png" width="48px" title="Accueil" alt="Retour à l'accueil" />
             </a>
             <div>
                 <a href="index.html">Accueil</a>
@@ -100,7 +100,7 @@
     </main>
     <footer>
         <a href="index.html" class="lien-icone">
-            <img src="images/logo.png" title="accueil" alt="retour à l'accueil" />
+            <img src="images/logo.png" width="48px" title="accueil" alt="retour à l'accueil" />
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
