Correction des alignements

--- a/a-propos.html
+++ b/a-propos.html
@@ -80,10 +80,10 @@
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
-                <img src="images/twitter.png" alt="Logo Twitter" />
+                <img src="images/twitter.png" width="37px" alt="Logo Twitter" />
             </a>
             <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
-                <img src="images/instagram.png" alt="Logo Instagram" />
+                <img src="images/instagram.png" width="32px" alt="Logo Instagram" />
             </a>
         </div>
     </footer>
