Ajout d'espace dans le texte d'un bouton

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         plus de 5 ans maintenant, je photographie des paysages avec la passion
                         qui m’anime : capturer l’essence et la beauté de chaque lieu.
                     </p>
-                    <a href="#contact" class="cta">UN PROJET ? ÉCRIVEZ-MOI</a>
+                    <a href="#contact" class="cta">UN PROJET ? &nbsp&nbsp ÉCRIVEZ-MOI</a>
                 </div>
                 <img src="images/appareil.webp" alt="Appareil photo" />
             </section>
