--- a/a-propos.html
+++ b/a-propos.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <title>À propos - Paysages</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La page à propos du site d'un photographe amateur">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
