--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La page portfolio du site d'un photographe amateur">
+    <meta name="robots" content="noindex, nofollow">
     <title>Portfolio - Paysages</title>
     <link href="style/style.css" rel="stylesheet" />
     <link href="style/portfolio.css" rel="stylesheet" />
