Ajout de tabindex et aria-label

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             <section class="accueil-photos">
                 <h2>Mes dernières photos</h2>
                 <div>
-                    <img src="images/accueil/element-1.webp" alt="" />
-                    <img src="images/accueil/element-2.webp" alt="" />
-                    <img src="images/accueil/element-3.webp" alt="" />
+                    <img src="images/accueil/element-1.webp" alt="" tabindex="0"/>
+                    <img src="images/accueil/element-2.webp" alt="" tabindex="0"/>
+                    <img src="images/accueil/element-3.webp" alt="" tabindex="0"/>
                 </div>
                 <div>
-                    <img src="images/accueil/element-4.webp" alt="" />
-                    <img src="images/accueil/element-5.webp" alt="" />
-                    <img src="images/accueil/element-6.webp" alt="" />
+                    <img src="images/accueil/element-4.webp" alt="" tabindex="0"/>
+                    <img src="images/accueil/element-5.webp" alt="" tabindex="0"/>
+                    <img src="images/accueil/element-6.webp" alt="" tabindex="0"/>
                 </div>
             </section>
             <section id="contact" class="section-contact">
