--- a/portfolio.html
+++ b/portfolio.html
@@ -33,66 +33,66 @@
         <section class="portfolio-section-photos">
             <h2>Paysages partie 1</h2>
             <div class="grid-paysages1">
-                <a href="images/portfolio/paysage1.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage1.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage1.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage2.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage2.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage2.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage3.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage3.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage3.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage4.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage4.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage4.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage5.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage5.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage5.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage6.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage6.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage6.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage7.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage7.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage7.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage8.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage8.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage8.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage9.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage9.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage9.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
             </div>
             <h2>Paysages partie 2</h2>
             <div class="grid-paysages2">
-                <a href="images/portfolio/paysage10.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage10.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage10.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage11.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage11.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage11.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage12.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage12.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage12.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage13.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage13.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage13.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage14.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage14.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage14.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage15.webp" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage15.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
                     <img src="images/portfolio/paysage15.webp" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
