Ajout du lazyloading

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <img src="images/accueil/element-3.webp" alt="" tabindex="0"/>
                 </div>
                 <div>
-                    <img src="images/accueil/element-4.webp" alt="" tabindex="0"/>
-                    <img src="images/accueil/element-5.webp" alt="" tabindex="0"/>
-                    <img src="images/accueil/element-6.webp" alt="" tabindex="0"/>
+                    <img src="images/accueil/element-4.webp" loading="lazy" alt="" tabindex="0"/>
+                    <img src="images/accueil/element-5.webp" loading="lazy" alt="" tabindex="0"/>
+                    <img src="images/accueil/element-6.webp" loading="lazy" alt="" tabindex="0"/>
                 </div>
             </section>
             <section id="contact" class="section-contact">
