--- a/portfolio.html
+++ b/portfolio.html
@@ -58,42 +58,42 @@
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage7.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage7.webp" alt="" />
+                    <img src="images/portfolio/paysage7.webp" loading="lazy" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage8.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage8.webp" alt="" />
+                    <img src="images/portfolio/paysage8.webp" loading="lazy" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage9.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage9.webp" alt="" />
+                    <img src="images/portfolio/paysage9.webp" loading="lazy" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
             </div>
             <h2>Paysages partie 2</h2>
             <div class="grid-paysages2">
                 <a href="images/portfolio/paysage10.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage10.webp" alt="" />
+                    <img src="images/portfolio/paysage10.webp" loading="lazy" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage11.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage11.webp" alt="" />
+                    <img src="images/portfolio/paysage11.webp" loading="lazy" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage12.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage12.webp" alt="" />
+                    <img src="images/portfolio/paysage12.webp" loading="lazy" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage13.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage13.webp" alt="" />
+                    <img src="images/portfolio/paysage13.webp" loading="lazy" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage14.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage14.webp" alt="" />
+                    <img src="images/portfolio/paysage14.webp" loading="lazy" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage15.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage15.webp" alt="" />
+                    <img src="images/portfolio/paysage15.webp" loading="lazy" alt="" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
 
