--- a/portfolio.html
+++ b/portfolio.html
@@ -34,27 +34,27 @@
             <h2>Paysages partie 1</h2>
             <div class="grid-paysages1">
                 <a href="images/portfolio/paysage1.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage1.webp" alt="" />
+                    <img src="images/portfolio/paysage1.webp" alt="" srcset="images/portfolio/paysage1.webp 1536w, images/portfolio/paysage1mini.webp 1000w" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage2.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage2.webp" alt="" />
+                    <img src="images/portfolio/paysage2.webp" alt="" srcset="images/portfolio/paysage2.webp 1536w, images/portfolio/paysage2mini.webp 1000w" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage3.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage3.webp" alt="" />
+                    <img src="images/portfolio/paysage3.webp" alt="" srcset="images/portfolio/paysage3.webp 1536w, images/portfolio/paysage3mini.webp 1000w" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage4.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage4.webp" alt="" />
+                    <img src="images/portfolio/paysage4.webp" alt="" srcset="images/portfolio/paysage4.webp 1536w, images/portfolio/paysage4mini.webp 1000w" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage5.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage5.webp" alt="" />
+                    <img src="images/portfolio/paysage5.webp" alt="" srcset="images/portfolio/paysage5.webp 1536w, images/portfolio/paysage5mini.webp 1000w" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage6.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage6.webp" alt="" />
+                    <img src="images/portfolio/paysage6.webp" alt="" srcset="images/portfolio/paysage6.webp 1536w, images/portfolio/paysage6mini.webp 1000w" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage7.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
