--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preload" fetchpriority="high" as="image" href="images/portfolio/paysage1mini.webp" type="image/webp">
+    <link rel="preload" fetchpriority="high" as="image" href="images/portfolio/paysage2mini.webp" type="image/webp">
 </head>
 
 <body>
