--- a/a-propos.html
+++ b/a-propos.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <a href="" class="lien-icone">
-                <img src="images/logo.png" width="48px" title="accueil"  alt="Retour à l'accueil" />
+                <img src="images/logo.png" width="48" title="accueil"  alt="Retour à l'accueil" />
             </a>
             <div>
                 <a href="index.html">Accueil</a>
@@ -78,14 +78,14 @@
     </main>
     <footer>
         <a href="index.html" class="lien-icone">
-            <img src="images/logo.png" width="48px" title="accueil"  alt="Retour à l'accueil" />
+            <img src="images/logo.png" width="48" title="accueil"  alt="Retour à l'accueil" />
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
-                <img src="images/twitter.png" width="37px" alt="Logo Twitter" />
+                <img src="images/twitter.png" width="37" alt="Logo Twitter" />
             </a>
             <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
-                <img src="images/instagram.png" width="32px" alt="Logo Instagram" />
+                <img src="images/instagram.png" width="32" alt="Logo Instagram" />
             </a>
         </div>
     </footer>
