--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <nav>
                 <a href="" class="lien-icone">
-                    <img src="images/logo.png" title="Accueil" width="48px" alt="retour à l'accueil" />
+                    <img src="images/logo.png" title="Accueil" width="48" alt="retour à l'accueil" />
                 </a>
                 <div>
                     <a href="index.html">Accueil</a>
@@ -35,7 +35,7 @@
                         plus de 5 ans maintenant, je photographie des paysages avec la passion
                         qui m’anime : capturer l’essence et la beauté de chaque lieu.
                     </p>
-                    <a href="#contact" class="cta">UN PROJET ? &nbsp&nbsp ÉCRIVEZ-MOI</a>
+                    <a href="#contact" class="cta">UN PROJET ? &#8205; &#8205; ÉCRIVEZ-MOI</a>
                 </div>
                 <img src="images/appareil.webp" alt="Appareil photo" />
             </section>
@@ -54,7 +54,7 @@
             </section>
             <section id="contact" class="section-contact">
                 <h2>Contactez-moi</h2>
-                <form method="get" action="">
+                <form method="get" action="#">
                     <div class="form-nom-email">
                         <div class="form-column">
                             <label for="nom">nom</label>
@@ -62,7 +62,7 @@
                         </div>
                         <div class="form-column">
                             <label for="email">email</label>
-                            <input type="e-mail" name="email" id="email" />
+                            <input type="email" name="email" id="email" />
                         </div>
                     </div>
                     <label for="message">message</label>
@@ -73,14 +73,14 @@
         </main>
         <footer>
             <a href="index.html" class="lien-icone">
-                <img src="images/logo.png" width="48px" title="Accueil" alt="Retour à l'accueil" />
+                <img src="images/logo.png" width="48" title="Accueil" alt="Retour à l'accueil" />
             </a>
             <div>
                 <a target="_blank" href="https://twitter.com/" class="lien-icone">
-                    <img src="images/twitter.png" width="37px" alt="Logo Twitter" />
+                    <img src="images/twitter.png" width="37" alt="Logo Twitter" />
                 </a>
                 <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
-                    <img src="images/instagram.png" width="32px" alt="Logo Instagram" />
+                    <img src="images/instagram.png" width="32" alt="Logo Instagram" />
                 </a>
             </div>
         </footer>
