--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <header>
         <nav>
             <a href="" class="lien-icone">
-                <img src="images/logo.png" width="48px" title="Accueil" alt="Retour à l'accueil" />
+                <img src="images/logo.png" width="48" title="Accueil" alt="Retour à l'accueil" />
             </a>
             <div>
                 <a href="index.html">Accueil</a>
@@ -36,27 +36,27 @@
             <h2>Paysages partie 1</h2>
             <div class="grid-paysages1">
                 <a href="images/portfolio/paysage1.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage1.webp" alt="" srcset="images/portfolio/paysage1.webp 1536w, images/portfolio/paysage1mini.webp 1000w" />
+                    <img src="images/portfolio/paysage1.webp" alt="" srcset="images/portfolio/paysage1.webp 1536w, images/portfolio/paysage1mini.webp 1000w" sizes="(max-width: 1000px) 1000px, 1536px" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage2.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage2.webp" alt="" srcset="images/portfolio/paysage2.webp 1536w, images/portfolio/paysage2mini.webp 1000w" />
+                    <img src="images/portfolio/paysage2.webp" alt="" srcset="images/portfolio/paysage2.webp 1536w, images/portfolio/paysage2mini.webp 1000w" sizes="(max-width: 1000px) 1000px, 1536px" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage3.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage3.webp" alt="" srcset="images/portfolio/paysage3.webp 1536w, images/portfolio/paysage3mini.webp 1000w" />
+                    <img src="images/portfolio/paysage3.webp" alt="" srcset="images/portfolio/paysage3.webp 1536w, images/portfolio/paysage3mini.webp 1000w" sizes="(max-width: 1000px) 1000px, 1536px" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage4.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage4.webp" alt="" srcset="images/portfolio/paysage4.webp 1536w, images/portfolio/paysage4mini.webp 1000w" />
+                    <img src="images/portfolio/paysage4.webp" alt="" srcset="images/portfolio/paysage4.webp 1536w, images/portfolio/paysage4mini.webp 1000w" sizes="(max-width: 1000px) 1000px, 1536px" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage5.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage5.webp" alt="" srcset="images/portfolio/paysage5.webp 1536w, images/portfolio/paysage5mini.webp 1000w" />
+                    <img src="images/portfolio/paysage5.webp" alt="" srcset="images/portfolio/paysage5.webp 1536w, images/portfolio/paysage5mini.webp 1000w" sizes="(max-width: 1000px) 1000px, 1536px" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage6.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
-                    <img src="images/portfolio/paysage6.webp" alt="" srcset="images/portfolio/paysage6.webp 1536w, images/portfolio/paysage6mini.webp 1000w" />
+                    <img src="images/portfolio/paysage6.webp" alt="" srcset="images/portfolio/paysage6.webp 1536w, images/portfolio/paysage6mini.webp 1000w" sizes="(max-width: 1000px) 1000px, 1536px" />
                     <div class="photo-hover">Voir la photo</div>
                 </a>
                 <a href="images/portfolio/paysage7.webp" class="lien-conteneur-photo" tabindex="0" aria-label="Calanque">
@@ -104,14 +104,14 @@
     </main>
     <footer>
         <a href="index.html" class="lien-icone">
-            <img src="images/logo.png" width="48px" title="accueil" alt="retour à l'accueil" />
+            <img src="images/logo.png" width="48" title="accueil" alt="retour à l'accueil" />
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
-                <img src="images/twitter.png" width="37px" alt="Logo Twitter" />
+                <img src="images/twitter.png" width="37" alt="Logo Twitter" />
             </a>
             <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
-                <img src="images/instagram.png" width="32px" alt="Logo Instagram" />
+                <img src="images/instagram.png" width="32" alt="Logo Instagram" />
             </a>
         </div>
     </footer>
